fix: game page alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,3 +9,7 @@ body {
 	max-width: 1440px;
 	margin: 0 auto;
 }
+
+.page--game {
+	margin: 0 auto;
+}
